# prediction_markets

./: .env  .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  CS2_matches.csv  CURRENT_STATE.md  GEMINI.md  PROJECT_PLAN.md  README.md  find_identifiers.py  investigate_kalshi.py  page_dump.html  pyproject.toml  test_collectors.py
data/: blast_rivals_matches.txt
data/processed/: markets_20251130_214641.csv  markets_20251130_214747.csv  markets_20251130_220854.csv  markets_20251130_220930.csv  markets_20251130_221401.csv  markets_20251130_224200.csv
data/raw/: kalshi_20251130_214747.json  kalshi_CS2_20251130_221401.json  kalshi_CS2_20251130_224200.json  polymarket_20251130_214641.json  polymarket_20251130_214747.json  polymarket_20251130_220854.json  polymarket_20251130_220930.json  polymarket_CS2_20251130_221401.json  polymarket_CS2_20251130_224200.json  polymarket_EPL_20251130_221401.json  polymarket_EPL_20251130_224200.json
docs/: architecture.md  definitions.md  index.md  liquid_market_search.md  liquidity_analysis.md  market_search.md  math_and_logic.md  metrics_and_plots.md  metrics_calculation.md  polymarket_metadata.md
docs/api_specs/: data_models.md  kalshi.md  polymarket.md
reports/: liquid_markets_report_20251208_2200.md  market_report_cs2_20251208_214140.md  market_report_temperature_20251208_205740.md  market_report_temperature_20251208_214140.md  market_report_weather_20251208_194521.md  market_report_weather_20251208_214141.md
src/: cli.py  config.py  main.py
src/analysis/: analyze_blast_rivals.py  analyze_slippage.py  arbitrage.py  audit_apis.py  calculate_metrics.py  compare_starladder.py  dump_all_markets.py  (+34 more)
tests/: test_collectors.py
(+13 files in other folders)
